test_scores/negative_dimers/features/O14757.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/O14757.pkl.xz